force-app/main/default/objects/CaseComment__c/CaseComment__c.object-meta.xml
<CustomObject>
    <description>This object corresponds to the &quot;Chat App Vivo&quot;, which records a conversation between the service operator and the b2c customer. It is displayed on the Cases screen in the &quot;Minhas Solicitações&quot; flow: Ajuda com cobrança, Ajuda com fatura ou cobrança, Ajuda com o Pedido, Mudança do Endereço de Instalação, Problema com Portabilidade, Problemas com Recarga.</description>
    <label>Comentário do Caso</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>Número do Comentário do Caso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseComments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>