force-app/main/default/objects/CaseComment__c/fields/IDGedoc__c.field-meta.xml
<CustomField>
    <fullName>IDGedoc__c</fullName>
    <description>Implementar o recurso de visualizar os anexos enviados via chat</description>
    <label>Id do Arquivo no Gedoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>