force-app/main/default/objects/CaseComment__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <defaultValue>(&quot;App Vivo&quot;)</defaultValue>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App Vivo</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>