force-app/main/default/objects/CaseComment__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentId</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>CaseComment</relationshipName>
    <type>Lookup</type>
</CustomField>