force-app/main/default/objects/CaseComment__c/fields/ViewDatetime__c.field-meta.xml
<CustomField>
    <fullName>ViewDatetime__c</fullName>
    <label>ViewDatetime</label>
    <type>DateTime</type>
</CustomField>